Changing color of footer

--- a/_sass/_01_settings_colors.scss
+++ b/_sass/_01_settings_colors.scss
@@ -109,14 +109,14 @@ $topbar-menu-icon-color-toggled: $swc-blue-med;
 /* Footer
 ------------------------------------------------------------------- */
 
-$footer-bg: $grey-8;
-$footer-color: #fff;
-$footer-link-color: $ci-6;
+$footer-bg: $swc-blue;
+$footer-color: $body-bg;
+$footer-link-color: $body-bg;
 
 
-$subfooter-bg: $grey-13;
-$subfooter-color: $grey-8;
-$subfooter-link-color: $ci-6;
+$subfooter-bg: $swc-blue;
+$subfooter-color: $body-bg;
+$subfooter-link-color: $body-bg;
 
 
 
