--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -65,15 +65,17 @@ body.video cite { color: #fff; }
 
 #masthead {
     background-color: $primary-color;
+    color: #ffffff;
 }
 #masthead-no-image-header {
     background-color: $primary-color;
+    color: #ffffff;
 }
 #masthead-with-text {
     text-align: center;
     font-size: rem-calc(54);
     font-family: $header-font-family;
-    color: #fff;
+    color: #ffffff;
     text-transform: uppercase;
     text-shadow: 0 2px 3px rgba(0,0,0,.4);
 }
@@ -82,6 +84,10 @@ body.video cite { color: #fff; }
 }
 #masthead-no-image-header #logo img {
     margin-top: 10px;
+}
+
+h3.masthead {
+    color: #ffffff;
 }
 
 /* Masthead › small-only
