--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -270,6 +270,7 @@ h3.masthead {
 #footer-content li {
     font-size: rem-calc(13);
     font-weight: 300;
+    padding-bottom: 10px;
 }
 
 #footer {
@@ -277,18 +278,18 @@ h3.masthead {
     padding-bottom: 0px;
     background: $footer-bg;
     color: $footer-color;
-    height: 100px;
-    }
+}
 
-    #footer a {
-        color: $footer-link-color;
-    }
-    #footer h4,
-    #footer h5 {
-        letter-spacing: 1px;
-        color: #fff;
-        text-transform: uppercase;
-    }
+#footer a {
+    color: $footer-link-color;
+}
+
+#footer h4,
+#footer h5 {
+    letter-spacing: 1px;
+    color: #fff;
+    text-transform: uppercase;
+}
 
 
 
@@ -296,17 +297,28 @@ h3.masthead {
 ------------------------------------------------------------------- */
 
 
-    #footer-left ul.inline-list {
-        float: left;
+#footer-left p {
+    position: absolute;
+    bottom: 0px;
+}
+
+#footer-left ul.inline-list {
+    float: left;
+}
+
+#footer-right ul.inline-list {
+    position: absolute;
+    bottom: 0px;
+}
+
+#footer .credits a {
+    color: $footer-link-color;
+    border: 0;
+    text-transform: uppercase;
+    &:hover {
+        color: #fff;
     }
-    #footer .credits a {
-        color: $footer-link-color;
-        border: 0;
-        text-transform: uppercase;
-        &:hover {
-            color: #fff;
-        }
-    }
+}
 
     #footer .social-icons li a {
         font-size: rem-calc(23);
@@ -339,7 +351,7 @@ h3.masthead {
 
 .b15 { margin-bottom: 15px !important; }
 .b20 { margin-bottom: 20px !important; }
-.b30 { margin-bottom: 30px !important; }
+.b30 { margin-bottom: 0px !important; }
 .b60 { margin-bottom: 60px !important; }
 
 .l15 { margin-left: 15px !important; }
