Making text flow around small images

--- a/_includes/orgs/insight-data-science.html
+++ b/_includes/orgs/insight-data-science.html
@@ -1,8 +1,6 @@
-<div>
+<p class="imgpar" id="insight-data-science">
   <img src="{{site.filesurl}}/orgs/insight-data-science.png" alt="Insight Data Science" />
-  <div id="insight-data-science" class="media-body">
-    <a href="http://insightdatascience.com/">Insight Data Science</a>
-    offers an intensive seven week post-doctoral training fellowship
-    bridging the gap between academia and data science.
-  </div>
-</div>
+  <a href="http://insightdatascience.com/">Insight Data Science</a>
+  offers an intensive seven week post-doctoral training fellowship
+  bridging the gap between academia and data science.
+</p>
