--- a/_includes/orgs/lanl.html
+++ b/_includes/orgs/lanl.html
@@ -1,8 +1,6 @@
-<div>
+<p class="imgpar" id="lanl">
   <img src="{{site.filesurl}}/orgs/lanl.png" alt="Los Alamos National Laboratory" />
-  <div id="lanl" class="media-body">
-    The mission of
-    <a href="http://lanl.gov/">Los Alamos National Laboratory</a>
-    is to solve national security challenges through scientific excellence.
-  </div>
-</div>
+  The mission of
+  <a href="http://lanl.gov/">Los Alamos National Laboratory</a>
+  is to solve national security challenges through scientific excellence.
+</p>
