--- a/_includes/orgs/michigan-state.html
+++ b/_includes/orgs/michigan-state.html
@@ -1,10 +1,8 @@
-<div>
+<p class="imgpar" id="michigan-state">
   <img src="{{site.filesurl}}/orgs/michigan-state.jpg" alt="Michigan State University" />
-  <div id="michigan-state" class="media-body">
-    The <a href="http://icer.msu.edu/">Institute for Cyber-Enabled
-    Research</a> (iCER) at <a href="http://msu.edu">Michigan State
-    University</a> provides a common structure for researchers from
-    across academia and industry to work on how computation can better
-    their research.
-  </div>
-</div>
+  The <a href="http://icer.msu.edu/">Institute for Cyber-Enabled
+  Research</a> (iCER) at <a href="http://msu.edu">Michigan State
+  University</a> provides a common structure for researchers from
+  across academia and industry to work on how computation can better
+  their research.
+</p>
