--- a/_includes/orgs/mozilla.html
+++ b/_includes/orgs/mozilla.html
@@ -1,8 +1,6 @@
-<div>
+<p class="imgpar" id="mozilla">
   <img src="{{site.filesurl}}/orgs/mozilla.png" alt="Mozilla Foundation" />
-  <div id="mozilla" class="media-body">
-    The <a href="https://www.mozilla.org/">Mozilla Foundation</a> is a
-    non-profit organization that promotes openness, innovation and
-    participation on the Internet.
-  </div>
-</div>
+  The <a href="https://www.mozilla.org/">Mozilla Foundation</a> is a
+  non-profit organization that promotes openness, innovation and
+  participation on the Internet.
+</p>
