--- a/_includes/orgs/numfocus.html
+++ b/_includes/orgs/numfocus.html
@@ -1,12 +1,10 @@
-<div>
+<p class="imgpar" id="numfocus">
   <img src="{{site.filesurl}}/orgs/numfocus.jpg" alt="NumFOCUS" />
-  <div id="numfocus" class="media-body">
-    The purpose of <a href="http://numfocus.org">NumFOCUS</a>
-    is to promote the use of accessible and reproducible computing in science and technology
-    through educational programs,
-    the promotion of high-level languages,
-    reproducible scientific research,
-    and open-code development,
-    and an increase in collaborative research tools and documentation.
-  </div>
-</div>
+  The purpose of <a href="http://numfocus.org">NumFOCUS</a>
+  is to promote the use of accessible and reproducible computing in science and technology
+  through educational programs,
+  the promotion of high-level languages,
+  reproducible scientific research,
+  and open-code development,
+  and an increase in collaborative research tools and documentation.
+</p>
