--- a/_includes/orgs/psf.html
+++ b/_includes/orgs/psf.html
@@ -1,9 +1,7 @@
-<div>
+<p class="imgpar" id="psf">
   <img src="{{site.filesurl}}/orgs/psf.png" alt="Python Software Foundation" />
-  <div id="psf" class="media-body">
-    The mission of the <a href="https://www.python.org/psf/">Python Software Foundation</a> is to promote,
-    protect,
-    and advance the Python programming language,
-    and to support and facilitate the growth of a diverse and international community of Python programmers.
-  </div>
-</div>
+  The mission of the <a href="https://www.python.org/psf/">Python Software Foundation</a> is to promote,
+  protect,
+  and advance the Python programming language,
+  and to support and facilitate the growth of a diverse and international community of Python programmers.
+</p>
