--- a/_includes/orgs/qmul.html
+++ b/_includes/orgs/qmul.html
@@ -1,10 +1,8 @@
-  <div>
+<p class="imgpar" id="qmul">
     <img src="{{site.filesurl}}/orgs/qmul.gif" alt="Queen Mary University London" />
-    <div id="qmul" class="media-body">
-      The Centre for Digital Music (C4DM)
-      at <a href="http://www.qmul.ac.uk/">Queen Mary University London</a>
-      is a world-leading multidisciplinary research group in the field
-      of Music &amp; Audio Technology. This activity is funded by
-      EPSRC Grant EP/H043101/1.
-  </div>
-</div>
+    The Centre for Digital Music (C4DM)
+    at <a href="http://www.qmul.ac.uk/">Queen Mary University London</a>
+    is a world-leading multidisciplinary research group in the field
+    of Music &amp; Audio Technology. This activity is funded by
+    EPSRC Grant EP/H043101/1.
+</p>
