--- a/_includes/orgs/sloan.html
+++ b/_includes/orgs/sloan.html
@@ -1,7 +1,5 @@
-<div>
+<p class="imgpar" id="sloan">
   <img src="{{site.filesurl}}/orgs/sloan.png" alt="Sloan Foundation" />
-  <div id="sloan" class="media-body">
-    The <a href="http://www.sloan.org/">Alfred P. Sloan Foundation</a>, a
-    philanthropic, not-for-profit grantmaking institution established in 1934.
-  </div>
-</div>
+  The <a href="http://www.sloan.org/">Alfred P. Sloan Foundation</a>, a
+  philanthropic, not-for-profit grantmaking institution established in 1934.
+</p>
