--- a/_includes/orgs/bids.html
+++ b/_includes/orgs/bids.html
@@ -1,8 +1,6 @@
-<div>
+<p class="imgpar" id="bids">
   <img src="{{site.filesurl}}/orgs/bids.png" alt="Berkeley Institute for Data Science" />
-  <div id="bids" class="media-body">
-    The <a href="http://bids.berkeley.edu/">Berkeley Institute for Data Science</a>
-    is a central hub of research and education at UC Berkeley
-    designed to facilitate and nurture data-intensive science.
-  </div>
-</div>
+  The <a href="http://bids.berkeley.edu/">Berkeley Institute for Data Science</a>
+  is a central hub of research and education at UC Berkeley
+  designed to facilitate and nurture data-intensive science.
+</p>
