--- a/_includes/orgs/compute-canada.html
+++ b/_includes/orgs/compute-canada.html
@@ -1,8 +1,6 @@
-<div>
+<p class="imgpar" id="compute-canada">
   <img src="{{site.filesurl}}/orgs/compute-canada.jpg" alt="Compute Canada" />
-  <div id="compute-canada" class="media-body">
-    <a href="https://computecanada.ca/">Compute Canada</a>'s
-    is leading the creation of a powerful national HPC platform for research in Canada
-    by integrating HPC resources at six partner consortia across the country.
-  </div>
-</div>
+  <a href="https://computecanada.ca/">Compute Canada</a>'s
+  is leading the creation of a powerful national HPC platform for research in Canada
+  by integrating HPC resources at six partner consortia across the country.
+</p>
