--- a/_includes/orgs/continuum.html
+++ b/_includes/orgs/continuum.html
@@ -1,9 +1,7 @@
-<div>
+<p class="imgpar" id="continuum">
   <img src="{{site.filesurl}}/orgs/continuum.png" alt="Continuum Analytics" />
-    <div id="continuum" class="media-body">
-      <a href="http://continuum.io/">Continuum Analytics</a>'s mission is
-      to revolutionize how the world's data is stored, computing, and visualized.
-      They provide open technologies for data integration on a massive scale
-      based on their vision of a structured, universal "data web".
-  </div>
-</div>
+  <a href="http://continuum.io/">Continuum Analytics</a>'s mission is
+  to revolutionize how the world's data is stored, computing, and visualized.
+  They provide open technologies for data integration on a massive scale
+  based on their vision of a structured, universal "data web".
+</p>
