--- a/_includes/orgs/elixir-uk.html
+++ b/_includes/orgs/elixir-uk.html
@@ -1,10 +1,8 @@
-<div>
+<p class="imgpar" id="elixir-uk">
   <img src="{{site.filesurl}}/orgs/elixir-uk.png" alt="ELIXIR UK" />
-  <div id="elixir-uk" class="media-body">
-    <a href="http://elixir-uk.org/">ELIXIR UK</a>,
-    a part of the pan-European ELIXIR community,
-    seeks to facilitate access to training in UK and across Europe for scientists in both academia and industry,
-    which will allow researchers to combine their experimental expertise with available computational infrastructure
-    to address critical research questions.
-  </div>
-</div>
+  <a href="http://elixir-uk.org/">ELIXIR UK</a>,
+  a part of the pan-European ELIXIR community,
+  seeks to facilitate access to training in UK and across Europe for scientists in both academia and industry,
+  which will allow researchers to combine their experimental expertise with available computational infrastructure
+  to address critical research questions.
+</p>
