--- a/_includes/orgs/enthought.html
+++ b/_includes/orgs/enthought.html
@@ -1,9 +1,7 @@
-<div>
+<p class="imgpar" id="enthought">
   <img src="{{site.filesurl}}/orgs/enthought.png" alt="Enthought" />
-  <div id="enthought" class="media-body">
-    <a href="https://enthought.com/">Enthought Scientific Computing</a>'s
-    mission is to significantly improve the way scientific computing is
-    accomplished by providing powerful tools for quantitative data analysis
-    and visualization.
-  </div>
-</div>
+  <a href="https://enthought.com/">Enthought Scientific Computing</a>'s
+  mission is to significantly improve the way scientific computing is
+  accomplished by providing powerful tools for quantitative data analysis
+  and visualization.
+</p>
