--- a/_includes/orgs/github.html
+++ b/_includes/orgs/github.html
@@ -1,8 +1,6 @@
-<div>
+<p class="imgpar" id="github">
   <img src="{{site.filesurl}}/orgs/github.png" alt="GitHub" />
-  <div id="github" class="media-body">
-    <a href="https://github.com/">GitHub</a>
-    is the best place to share code with friends, co-workers, classmates, and complete strangers.
-    Over eight million people use GitHub to build amazing things together. 
-  </div>
-</div>
+  <a href="https://github.com/">GitHub</a>
+  is the best place to share code with friends, co-workers, classmates, and complete strangers.
+  Over eight million people use GitHub to build amazing things together. 
+</p>
