--- a/_includes/orgs/indiana-u.html
+++ b/_includes/orgs/indiana-u.html
@@ -1,9 +1,7 @@
-<div>
+<p class="imgpar" id="indiana-u">
   <img src="{{site.filesurl}}/orgs/indiana-u.jpg" alt="Indiana University" />
-  <div id="indiana-u" class="media-body">
-    The <a href="http://indiana.edu/">Indiana University</a> School of
-    Informatics and Computing is nationally recognized for excellence and
-    leadership in Informatics programs, including undergraduate and graduate
-    education, research, placement and outreach.
-  </div>
-</div>
+  The <a href="http://indiana.edu/">Indiana University</a> School of
+  Informatics and Computing is nationally recognized for excellence and
+  leadership in Informatics programs, including undergraduate and graduate
+  education, research, placement and outreach.
+</p>
