--- a/_includes/orgs/iplant.html
+++ b/_includes/orgs/iplant.html
@@ -1,7 +1,5 @@
-<div>
+<p class="imgpar" id="iplant">
   <img src="{{site.filesurl}}/orgs/iplant.png" alt="iPlant" />
-  <div id="iplant" class="media-body">
-    The <a href="http://www.iplantcollaborative.org/">iPlant Collaborative</a>'s mission is
-    to provide access to cyberinfrastructure for the broad life science community.
-  </div>
-</div>
+  The <a href="http://www.iplantcollaborative.org/">iPlant Collaborative</a>'s mission is
+  to provide access to cyberinfrastructure for the broad life science community.
+</p>
