--- a/_includes/orgs/jpmorgan.html
+++ b/_includes/orgs/jpmorgan.html
@@ -1,11 +1,9 @@
-<div>
+<p class="imgpar" id="jpmorgan">
   <img src="{{site.filesurl}}/orgs/jpmorgan.png" alt="J.P. Morgan" />
-  <div id="jpmorgan" class="media-body">
-      <a href="http://www.jpmorgan.com">J.P. Morgan</a>
-      is a leader in financial services, offering solutions to clients
-      in more than 100 countries with one of the most comprehensive
-      global product platforms available. We have been helping our
-      clients do business and manage their wealth for more than 200
-      years.
-  </div>
-</div>
+  <a href="http://www.jpmorgan.com">J.P. Morgan</a>
+  is a leader in financial services, offering solutions to clients
+  in more than 100 countries with one of the most comprehensive
+  global product platforms available. We have been helping our
+  clients do business and manage their wealth for more than 200
+  years.
+</p>
