--- a/_includes/orgs/kaust.html
+++ b/_includes/orgs/kaust.html
@@ -1,9 +1,7 @@
-<div>
+<p class="imgpar" id="kaust">
   <img src="{{site.filesurl}}/orgs/kaust.png" alt="KAUST" />
-  <div id="kaust" class="media-body">
-    The mission of the <a href="http://www.kaust.edu.sa/">King Abdullah University of Science and Technology</a>
-    in Saudi Arabia is to educate scientific and technological leaders,
-    catalyze the diversification of the Saudi economy,
-    and address challenges of regional and global significance.
-  </div>
-</div>
+  The mission of the <a href="http://www.kaust.edu.sa/">King Abdullah University of Science and Technology</a>
+  in Saudi Arabia is to educate scientific and technological leaders,
+  catalyze the diversification of the Saudi economy,
+  and address challenges of regional and global significance.
+</p>
