--- a/_includes/orgs/mathworks.html
+++ b/_includes/orgs/mathworks.html
@@ -1,7 +1,5 @@
-<div>
+<p class="imgpar" id="mathworks">
   <img src="{{site.filesurl}}/orgs/mathworks.png" alt="Mathworks" />
-  <div id="mathworks" class="media-body">
-    <a href="http://www.mathworks.com/">Mathworks</a> is the leading developer of
-    mathematical computing software for engineers and scientists.
-  </div>
-</div>
+  <a href="http://www.mathworks.com/">Mathworks</a> is the leading developer of
+  mathematical computing software for engineers and scientists.
+</p>
