--- a/_includes/orgs/mitacs.html
+++ b/_includes/orgs/mitacs.html
@@ -1,8 +1,6 @@
-<div>
+<p class="imgpar" id="mitacs">
   <img src="{{site.filesurl}}/orgs/mitacs.jpg" alt="MITACS" />
-  <div id="mitacs" class="media-body">
-    <a href="http://mitacs.ca/">MITACS</a> is a national research
-    network which connects academia with industry, government and
-    not-for-profits through short and longer-term research projects.
-  </div>
-</div>
+  <a href="http://mitacs.ca/">MITACS</a> is a national research
+  network which connects academia with industry, government and
+  not-for-profits through short and longer-term research projects.
+</p>
