--- a/_includes/orgs/nesi.html
+++ b/_includes/orgs/nesi.html
@@ -1,10 +1,8 @@
-<div>
+<p class="imgpar" id="nesi">
   <img src="{{site.filesurl}}/orgs/nesi.png" alt="NeSI" />
-  <div id="nesi" class="media-body">
-    <a href="https://www.nesi.org.nz/">NeSI</a>
-    (New Zealand eScience Infrastructure)
-    provides High Performance Computing (HPC) facilities to New
-    Zealand, supporting researchers across the public research sector
-    and private industry.
-  </div>
-</div>
+  <a href="https://www.nesi.org.nz/">NeSI</a>
+  (New Zealand eScience Infrastructure)
+  provides High Performance Computing (HPC) facilities to New
+  Zealand, supporting researchers across the public research sector
+  and private industry.
+</p>
