--- a/_includes/orgs/rackspace.html
+++ b/_includes/orgs/rackspace.html
@@ -1,8 +1,6 @@
-<div class="media">
-  <img class="media-object pull-left" src="{{site.filesurl}}/orgs/rackspace.png" alt="Rackspace" />
-  <div id="rackspace" class="media-body">
-    <a href="https://rackspace.com/">Rackspace</a>
-    is a hybrid cloud company specializing in dedicated
-    servers and public/private cloud solutions.
-  </div>
-</div>
+<p class="imgpar" id="rackspace">
+  <img src="{{site.filesurl}}/orgs/rackspace.png" alt="Rackspace" />
+  <a href="https://rackspace.com/">Rackspace</a>
+  is a hybrid cloud company specializing in dedicated
+  servers and public/private cloud solutions.
+</p>
