--- a/_includes/orgs/rstudio.html
+++ b/_includes/orgs/rstudio.html
@@ -1,12 +1,10 @@
-<div>
+<p class="imgpar" id="rstudio">
   <img src="{{site.filesurl}}/orgs/rstudio-small.png" alt="RStudio" />
-  <div id="rstudio" class="media-body">
-    <a href="http://www.rstudio.com/">RStudio</a>'s
-    develops free and open tools for the R community,
-    including the <a href="http://www.rstudio.com/products/rstudio/">RStudio development environment</a>,
-    <a href="http://shiny.rstudio.com/">shiny</a>,
-    <a href="http://ggvis.rstudio.com/">ggvis</a>,
-    <a href="https://github.com/hadley/dplyr">dplyr</a>,
-    and <a href="http://www.rstudio.com/products/rpackages/">many others</a>.
-  </div>
-</div>
+  <a href="http://www.rstudio.com/">RStudio</a>'s
+  develops free and open tools for the R community,
+  including the <a href="http://www.rstudio.com/products/rstudio/">RStudio development environment</a>,
+  <a href="http://shiny.rstudio.com/">shiny</a>,
+  <a href="http://ggvis.rstudio.com/">ggvis</a>,
+  <a href="https://github.com/hadley/dplyr">dplyr</a>,
+  and <a href="http://www.rstudio.com/products/rpackages/">many others</a>.
+</p>
