--- a/_includes/orgs/scimatic.html
+++ b/_includes/orgs/scimatic.html
@@ -1,8 +1,6 @@
-  <div>
-    <img src="{{site.filesurl}}/orgs/scimatic.png" alt="Scimatic Software" />
-    <div id="scimatic" class="media-body">
-      <a href="http://www.scimatic.com/">Scimatic Software</a> is a
-      Toronto-based company that specializes in the development of software for
-      the scientific community.
-  </div>
-</div>
+<p class="imgpar" id="scimatic">
+  <img src="{{site.filesurl}}/orgs/scimatic.png" alt="Scimatic Software" />
+  <a href="http://www.scimatic.com/">Scimatic Software</a> is a
+  Toronto-based company that specializes in the development of software for
+  the scientific community.
+</p>
