--- a/_includes/orgs/sharcnet.html
+++ b/_includes/orgs/sharcnet.html
@@ -1,9 +1,7 @@
-<div>
+<p class="imgpar" id="sharcnet">
   <img src="{{site.filesurl}}/orgs/sharcnet.jpg" alt="SHARCNET" />
-  <div id="sharcnet" class="media-body">
-    <a href="https://www.sharcnet.ca/">SHARCNET</a>
-    is a leading provider of HPC infrastructure and services for the
-    advancement of world-class research and the training of
-    computationally-expert individuals.
-  </div>
-</div>
+  <a href="https://www.sharcnet.ca/">SHARCNET</a>
+  is a leading provider of HPC infrastructure and services for the
+  advancement of world-class research and the training of
+  computationally-expert individuals.
+</p>
