--- a/_includes/orgs/ssi.html
+++ b/_includes/orgs/ssi.html
@@ -1,8 +1,6 @@
-<div>
+<p class="imgpar" id="ssi">
   <img src="{{site.filesurl}}/orgs/ssi.png" alt="Software Sustainability Institute" />
-    <div id="ssi" class="media-body">
-      The <a href="http://software.ac.uk/">Software Sustainability Institute</a>
-      works with researchers to ensure the useful longevity of
-      research software.
-  </div>
-</div>
+  The <a href="http://software.ac.uk/">Software Sustainability Institute</a>
+  works with researchers to ensure the useful longevity of
+  research software.
+</p>
