--- a/_includes/orgs/uc-davis.html
+++ b/_includes/orgs/uc-davis.html
@@ -1,7 +1,5 @@
-<div>
+<p class="imgpar" id="uc-davis">
   <img src="{{site.filesurl}}/orgs/uc-davis.png" alt="UC Davis" />
-  <div id="uc-davis" class="media-body">
-    The Laboratory for Data Intensive Biology at <a href="http://ucdavis.edu/">UC Davis</a>
-    does fundamental and applied research on making use of the increasing volume and variety of biological data.
-  </div>
-</div>
+  The Laboratory for Data Intensive Biology at <a href="http://ucdavis.edu/">UC Davis</a>
+  does fundamental and applied research on making use of the increasing volume and variety of biological data.
+</p>
