--- a/_includes/orgs/ucar.html
+++ b/_includes/orgs/ucar.html
@@ -1,9 +1,7 @@
-<div>
+<p class="imgpar" id="ucar">
   <img src="{{site.filesurl}}/orgs/ucar.jpg" alt="UCAR" />
-  <div id="ucar" class="media-body">
-    The <a href="http://www2.ucar.edu/">University Corporation for
-    Atmospheric Research</a> (UCAR) is a consortium of more than 100
-    member colleges and universities focused on research and training
-    in the atmospheric and related Earth system sciences.
-  </div>
-</div>
+  The <a href="http://www2.ucar.edu/">University Corporation for
+  Atmospheric Research</a> (UCAR) is a consortium of more than 100
+  member colleges and universities focused on research and training
+  in the atmospheric and related Earth system sciences.
+</p>
