--- a/_includes/orgs/ucl.html
+++ b/_includes/orgs/ucl.html
@@ -1,9 +1,7 @@
-<div>
+<p class="imgpar" id="ucl">
   <img src="{{site.filesurl}}/orgs/ucl.png" alt="University College London" />
-  <div id="ucl" class="media-body">
-    <a href="http://www.ucl.ac.uk/">UCL</a>
-    is London's Global University, founded to open up education to all
-    on equal terms.  Its outstanding research and innovative teaching
-    drive entrepreneurial solutions to the world's major problems.
-  </div>
-</div>
+  <a href="http://www.ucl.ac.uk/">UCL</a>
+  is London's Global University, founded to open up education to all
+  on equal terms.  Its outstanding research and innovative teaching
+  drive entrepreneurial solutions to the world's major problems.
+</p>
