--- a/_includes/orgs/ukmo.html
+++ b/_includes/orgs/ukmo.html
@@ -1,10 +1,8 @@
-<div>
+<p class="imgpar" id="ukmo">
   <img src="{{site.filesurl}}/orgs/ukmo.jpg" alt="UK Met Office" />
-  <div id="ukmo" class="media-body">
-    The <a href="http://www.metoffice.gov.uk/">Met Office</a>
-    is the national meteorological service for the United Kingdom,
-    providing quality meteorological and related services for the
-    Government, the public, the armed forces, aviation and commercial
-    customers.
-  </div>
-</div>
+  The <a href="http://www.metoffice.gov.uk/">Met Office</a>
+  is the national meteorological service for the United Kingdom,
+  providing quality meteorological and related services for the
+  Government, the public, the armed forces, aviation and commercial
+  customers.
+</p>
