--- a/_sass/_09_elements.scss
+++ b/_sass/_09_elements.scss
@@ -145,3 +145,19 @@ img.lazy {
     transition: opacity 0.7s;
     opacity: 1;
 }
+
+
+
+/* Images beside paragraphs
+Use as <p class="imgpar"><img src="..." /> text </p>
+------------------------------------------------------------------- */
+
+p.imgpar {
+    clear: both;
+}
+
+p.imgpar img {
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
