--- a/_includes/projects/archer.html
+++ b/_includes/projects/archer.html
@@ -1,13 +1,11 @@
-<div class="media">
+<p class="imgpar" id="archer">
   <img src="{{site.filesurl}}/projects/archer.png" alt="ARCHER" />
-  <div id="archer" class="media-body">
-    <a href="http://www.archer.ac.uk" class="project">ARCHER</a>
-    is the UK National Supercomputing Service, providing a world-class
-    supercomputer and invaluable computational resources, consultancy
-    and training for researchers who study problems with a global
-    impact.
-    <br/>
-    Contact:
-    <a href="{{site.baseurl}}/team/#jackson.m">Mike Jackson</a>
-  </div>
-</div>
+  <a href="http://www.archer.ac.uk" class="project">ARCHER</a>
+  is the UK National Supercomputing Service, providing a world-class
+  supercomputer and invaluable computational resources, consultancy
+  and training for researchers who study problems with a global
+  impact.
+  <br/>
+  Contact:
+  <a href="{{site.baseurl}}/team/#jackson.m">Mike Jackson</a>
+</p>
