--- a/_includes/projects/astropy.html
+++ b/_includes/projects/astropy.html
@@ -1,12 +1,10 @@
-<div class="media">
+<p class="imgpar" id="astropy">
   <img src="{{site.filesurl}}/projects/astropy.png" alt="Astropy" />
-  <div id="astropy" class="media-body">
-    <a href="http://www.astropy.org/" class="project">Astropy</a>
-    is a community-driven package intended to contain much of the core
-    functionality and some common tools needed for performing
-    astronomy and astrophysics with Python.
-    <br/>
-    Contact:
-    <a href="{{site.baseurl}}/team/#bray.e">Erik Bray</a>
-  </div>
-</div>
+  <a href="http://www.astropy.org/" class="project">Astropy</a>
+  is a community-driven package intended to contain much of the core
+  functionality and some common tools needed for performing
+  astronomy and astrophysics with Python.
+  <br/>
+  Contact:
+  <a href="{{site.baseurl}}/team/#bray.e">Erik Bray</a>
+</p>
