--- a/_includes/projects/ecodata-retriever.html
+++ b/_includes/projects/ecodata-retriever.html
@@ -1,11 +1,9 @@
-<div class="media">
+<p class="imgpar" id="ecodata-retriever">
   <img src="{{site.filesurl}}/projects/ecodata-retriever.png" alt="EcoDataRetriever" />
-  <div id="ecodata-retriever" class="media-body">
-    The <a href="http://ecodataretriever.org/" class="project">EcoData Retriever</a>
-    automates finding, downloading and cleaning up ecological datasets.
-    <br/>
-    Contact:
-    <a href="{{site.baseurl}}/team/#white.e">Ethan White</a>,
-    <a href="{{site.baseurl}}/team/#morris.b">Ben Morris</a>
-  </div>
-</div>
+  The <a href="http://ecodataretriever.org/" class="project">EcoData Retriever</a>
+  automates finding, downloading and cleaning up ecological datasets.
+  <br/>
+  Contact:
+  <a href="{{site.baseurl}}/team/#white.e">Ethan White</a>,
+  <a href="{{site.baseurl}}/team/#morris.b">Ben Morris</a>
+</p>
