--- a/_includes/projects/eff-phys.html
+++ b/_includes/projects/eff-phys.html
@@ -1,16 +1,14 @@
-<div class="media">
+<p class="imgpar" id="eff-phys">
   <img src="{{site.filesurl}}/projects/eff-phys.png" alt="Effective Computation in Physics" />
-  <div id="eff-phys" class="media-body">
-    <a href="http://physics.codes" class="project">Effective Computation in
-     Physics</a> is a manual of programming and software skills aimed at
-     researchers in the physical sciences and engineering. This field guide to
-     effective scientific computing in Python covers: programming in Python,
-     important Python packages such as NumPy and Pandas, interaction with the
-     command line, software testing, version control, build systems,
-     documentation, publishing using LaTeX, how to manage collaborative
-     software development with GitHub, and even how to license your software.
-    <br/>
-    Contact:
-    <a href="{{site.baseurl}}/team/#huff.k">Katy Huff</a>, <a href="{{site.baseurl}}/team/#scopatz.a">Anthony Scopatz</a>
-  </div>
-</div>
+  <a href="http://physics.codes" class="project">Effective Computation in
+    Physics</a> is a manual of programming and software skills aimed at
+  researchers in the physical sciences and engineering. This field guide to
+  effective scientific computing in Python covers: programming in Python,
+  important Python packages such as NumPy and Pandas, interaction with the
+  command line, software testing, version control, build systems,
+  documentation, publishing using LaTeX, how to manage collaborative
+  software development with GitHub, and even how to license your software.
+  <br/>
+  Contact:
+  <a href="{{site.baseurl}}/team/#huff.k">Katy Huff</a>, <a href="{{site.baseurl}}/team/#scopatz.a">Anthony Scopatz</a>
+</p>
