--- a/_includes/projects/jors.html
+++ b/_includes/projects/jors.html
@@ -1,13 +1,10 @@
-<div class="media">
+<p class="imgpar" id="jors">
   <img src="{{site.filesurl}}/projects/jors.png" alt="Journal of Open Research Software" />
-  <div id="jors" class="media-body">
-    The <a href="http://openresearchsoftware.metajnl.com"
-    class="project">Journal of Open Research Software</a> is an Open
-    Access journal featuring peer reviewed software metapapers
-    describing research software with high reuse potential and
-    full-length papers that cover different aspects of
-    creating, maintaining and evaluating open source research
-    software.  <br/> Contact:
-    <a href="{{site.baseurl}}/team/#chuehong.n">Neil Chue Hong</a>
-  </div>
-</div>
+  The <a href="http://openresearchsoftware.metajnl.com">Journal of Open Research Software</a> is an Open
+  Access journal featuring peer reviewed software metapapers
+  describing research software with high reuse potential and
+  full-length papers that cover different aspects of
+  creating, maintaining and evaluating open source research
+  software.  <br/> Contact:
+  <a href="{{site.baseurl}}/team/#chuehong.n">Neil Chue Hong</a>
+</p>
