--- a/_includes/projects/khmer.html
+++ b/_includes/projects/khmer.html
@@ -1,14 +1,12 @@
-<div class="media">
+<p class="imgpar" id="tec">
   <img src="{{site.filesurl}}/missing.jpg" alt="khmer project" />
-  <div id="tec" class="media-body">
-    The <a href="http://khmer.readthedocs.org/en/latest/">khmer
-    project</a> provides scripts and a library for analyzing,
-    filtering, and correcting DNA sequencing data.  The project
-    implements efficient probabilistic data structures and lossy
-    compression algorithms for working with very large DNA sequencing
-    data sets.
-    <br/>
-    Contact:
-    <a href="{{site.baseurl}}/team/#brown.ct">Titus Brown</a>
-  </div>
-</div>
+  The <a href="http://khmer.readthedocs.org/en/latest/">khmer project</a>
+  provides scripts and a library for analyzing,
+  filtering, and correcting DNA sequencing data.  The project
+  implements efficient probabilistic data structures and lossy
+  compression algorithms for working with very large DNA sequencing
+  data sets.
+  <br/>
+  Contact:
+  <a href="{{site.baseurl}}/team/#brown.ct">Titus Brown</a>
+</p>
