--- a/_includes/projects/mahotas.html
+++ b/_includes/projects/mahotas.html
@@ -1,11 +1,9 @@
-<div class="media">
+<p class="imgpar" id="mahotas">
   <img src="{{site.filesurl}}/missing.jpg" alt="Mahotas" />
-  <div id="mahotas" class="media-body">
-    <a href="http://mahotas.readthedocs.org/" class="project">Mahotas</a>
-    is a computer vision and image processing library for Python based
-    on NumPy.
-    <br/>
-    Contact:
-    <a href="{{site.baseurl}}/team/#coelho.luis">Luis Pedro Coelho</a>
-  </div>
-</div>
+  <a href="http://mahotas.readthedocs.org/" class="project">Mahotas</a>
+  is a computer vision and image processing library for Python based
+  on NumPy.
+  <br/>
+  Contact:
+  <a href="{{site.baseurl}}/team/#coelho.luis">Luis Pedro Coelho</a>
+</p>
