--- a/_includes/projects/math-education-resources.html
+++ b/_includes/projects/math-education-resources.html
@@ -1,16 +1,14 @@
-<div class="media">
+<p class="imgpar" id="math-education-resources">
   <img src="{{site.filesurl}}/missing.jpg" alt="Math Education Resources" />
-  <div id="math-education-resources" class="media-body">
-    The <a href="http://wiki.ubc.ca/Science:Math_Education_Resources" class="project">Math Education Resources</a>
-    is a volunteer-run project that provides substantial learning
-    resources to undergraduate students taking math courses at UBC or
-    elsewhere. Our wiki provides free hints and peer-reviewed
-    solutions to previous final exam questions from UBC's math
-    courses. Students can search questions by topic, watch mini video
-    lectures for each topic, or use the difficulty ratings from their
-    peers to guide their studies.
-    <br/>
-    Contact:
-    <a href="{{site.baseurl}}/team/#konrad.b">Bernhard Konrad</a>
-  </div>
-</div>
+  The <a href="http://wiki.ubc.ca/Science:Math_Education_Resources" class="project">Math Education Resources</a>
+  is a volunteer-run project that provides substantial learning
+  resources to undergraduate students taking math courses at UBC or
+  elsewhere. Our wiki provides free hints and peer-reviewed
+  solutions to previous final exam questions from UBC's math
+  courses. Students can search questions by topic, watch mini video
+  lectures for each topic, or use the difficulty ratings from their
+  peers to guide their studies.
+  <br/>
+  Contact:
+  <a href="{{site.baseurl}}/team/#konrad.b">Bernhard Konrad</a>
+</p>
