--- a/_includes/projects/nipy.html
+++ b/_includes/projects/nipy.html
@@ -1,13 +1,11 @@
-<div class="media">
+<p class="imgpar" id="nipy">
   <img src="{{site.filesurl}}/projects/nipy.png" alt="NIPY" />
-  <div id="nipy" class="media-body">
-    <a href="http://nipy.org/" class="project">NIPY</a> (Neuroimaging in
+  <a href="http://nipy.org/" class="project">NIPY</a> (Neuroimaging in
   Python) is making it easier to do better brain imaging research, by designing
   and implementing free and open-source algorithms and pipelines for the
   analysis of data from neuroimaging experiments, and teaching neuroscientists
   how to use them. 
-    <br/>
-    Contact:
-    <a href="{{site.baseurl}}/team/#rokem.a">Ariel Rokem</a>
-  </div>
-</div>
+  <br/>
+  Contact:
+  <a href="{{site.baseurl}}/team/#rokem.a">Ariel Rokem</a>
+</p>
