--- a/_includes/projects/pymc.html
+++ b/_includes/projects/pymc.html
@@ -1,9 +1,12 @@
-<div class="media">
+<p class="imgpar" id="pymc">
   <img src="{{site.filesurl}}/projects/pymc.png" alt="PyMC" />
-  <div id="pymc" class="media-body">
-    <a href="https://github.com/pymc-devs/pymc" class="project">PyMC</a> is a Python module that implements Bayesian statistical models and fitting algorithms, including Markov chain Monte Carlo. Its flexibility and extensibility make it applicable to a large suite of problems. Along with core sampling functionality, PyMC includes methods for summarizing output, plotting, goodness-of-fit and convergence diagnostics.
-    <br/>
-    <em>Contact</em>:
-    <a href="{{site.baseurl}}/team/#fonnesbeck.chris">Chris Fonnesbeck</a>
-  </div>
-</div>
+  <a href="https://github.com/pymc-devs/pymc" class="project">PyMC</a>
+  is a Python module that implements Bayesian statistical models and fitting algorithms,
+  including Markov chain Monte Carlo.
+  Its flexibility and extensibility make it applicable to a large suite of problems.
+  Along with core sampling functionality,
+  PyMC includes methods for summarizing output, plotting, goodness-of-fit and convergence diagnostics.
+  <br/>
+  <em>Contact</em>:
+  <a href="{{site.baseurl}}/team/#fonnesbeck.chris">Chris Fonnesbeck</a>
+</p>
