--- a/_includes/projects/ropensci.html
+++ b/_includes/projects/ropensci.html
@@ -1,13 +1,11 @@
-<div class="media">
+<p class="imgpar" id="pyne">
   <img src="{{site.filesurl}}/projects/ropensci.png" alt="rOpenSci project" />
-  <div id="pyne" class="media-body">
-    <a href="http://ropensci.org" class="project">rOpenSci</a>
-    is a software collective that provides R based tools to enable
-    access to scientific data repositories, full-text of articles, and
-    science metrics and also facilitate a culture shift in the
-    scientific community towards reproducible research practices.
-    <br/>
-    Contact:
-    <a href="{{site.baseurl}}/team/#ram.k">Karthik Ram</a>
-  </div>
-</div>
+  <a href="http://ropensci.org" class="project">rOpenSci</a>
+  is a software collective that provides R based tools to enable
+  access to scientific data repositories, full-text of articles, and
+  science metrics and also facilitate a culture shift in the
+  scientific community towards reproducible research practices.
+  <br/>
+  Contact:
+  <a href="{{site.baseurl}}/team/#ram.k">Karthik Ram</a>
+</p>
