Formatting persons properly and compressing layout of minutes on SCF page.

--- a/_sass/_09_elements.scss
+++ b/_sass/_09_elements.scss
@@ -161,3 +161,14 @@ p.imgpar img {
     margin-right: 10px;
     margin-bottom: 10px;
 }
+
+
+
+/* People
+Use as <p class="person">...</p> or <a href="..." class="person">...</a>
+------------------------------------------------------------------- */
+
+.person {
+    font-weight: bold;
+    font-style: italic;
+}
