--- a/_includes/orgs/rstudio.html
+++ b/_includes/orgs/rstudio.html
@@ -2,7 +2,7 @@
   <img src="{{site.filesurl}}/orgs/rstudio-small.png" alt="RStudio" />
   <a href="http://www.rstudio.com/">RStudio</a>'s
   develops free and open tools for the R community,
-  including the <a href="http://www.rstudio.com/products/rstudio/">RStudio development environment</a>,
+  including <a href="http://www.rstudio.com/products/rstudio/">RStudio</a>,
   <a href="http://shiny.rstudio.com/">shiny</a>,
   <a href="http://ggvis.rstudio.com/">ggvis</a>,
   <a href="https://github.com/hadley/dplyr">dplyr</a>,
