Comments on page-fullwidth

--- a/_layouts/page-fullwidth.html
+++ b/_layouts/page-fullwidth.html
@@ -31,6 +31,10 @@ format: page-fullwidth
 			{% endif %}
 
 			{{ content }}
+
+			{% if page.comments == true %}
+			{% include comments %}
+			{% endif %}
 		</article>
 	</div><!-- /.medium-12.columns -->
 </div><!-- /.row -->
