Catching up with recent changes to legacy site

--- a/_includes/people/huff.k.html
+++ b/_includes/people/huff.k.html
@@ -8,4 +8,6 @@
       href="http://thehackerwithin.github.io">The Hacker Within</a>.
     <br/>
     <strong>Steering Committee (Chair)</strong>
+    <br/>
+    <strong>Maintainer: <a href="https://github.com/katyhuff/python-testing">Testing and Continuous Integration with Python</a></strong>
 </p>
