renamed all includes with html extension

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -14,7 +14,7 @@
 </div><!-- /#masthead -->
 
 {% if page.breadcrumb == true %}
-{% include breadcrumb %}
+{% include breadcrumb.html %}
 {% endif %}
 
 
@@ -35,7 +35,7 @@
 </div><!-- /#masthead -->
 
 {% if page.breadcrumb == true %}
-{% include breadcrumb %}
+{% include breadcrumb.html %}
 {% endif %}
 
 {% if page.header.caption_url && page.header.caption %}
@@ -68,7 +68,7 @@
 </div><!-- /#masthead -->
 
 {% if page.breadcrumb == true %}
-{% include breadcrumb %}
+{% include breadcrumb.html %}
 {% endif %}
 
 {% if page.header.caption_url && page.header.caption %}
@@ -99,7 +99,7 @@
 </div><!-- /#masthead -->
 
 {% if page.breadcrumb == true %}
-{% include breadcrumb %}
+{% include breadcrumb.html %}
 {% endif %}
 
 {% if page.header.caption_url && page.header.caption %}
@@ -130,7 +130,7 @@
 </div><!-- /#masthead -->
 
 {% if page.breadcrumb == true %}
-{% include breadcrumb %}
+{% include breadcrumb.html %}
 {% endif %}
 
 {% if page.header.caption_url && page.header.caption %}
@@ -150,7 +150,7 @@
 {% elsif page.header == false %}
 
 {% if page.breadcrumb == true %}
-{% include breadcrumb %}
+{% include breadcrumb.html %}
 {% endif %}
 
 {% endif %}
