--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -4,4 +4,4 @@ format: blog-index
 # Don't index these pages dear Google.
 noindex: true
 ---
-{% include pagination %}
+{% include pagination.html %}
