--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,22 +2,22 @@
 ---
 <!doctype html>
 <html class="no-js" lang="{% if site.language == nil %}en{% else %}{{ site.language }}{% endif %}">
-<head>{% include setup/define-assets-urls %}
-{% include head %}
+<head>{% include setup/global-variables.html %}
+{% include head.html %}
 </head>
 <body id="top-of-page" class="{{ page.format }}">
 	{% unless page.skip_boilerplate %}
-	{% include navigation %}
+	{% include navigation.html %}
 	{% endunless %}
 
-	{% include masthead %}
+	{% include masthead.html %}
 
 	{{ content }}
 
 	{% unless page.skip_boilerplate %}
-	{% include footer %}
+	{% include footer.html %}
 	{% endunless %}
 
-	{% include footer_scripts %}
+	{% include footer_scripts.html %}
 </body>
 </html>
