--- a/_layouts/page-fullwidth.html
+++ b/_layouts/page-fullwidth.html
@@ -33,7 +33,7 @@ format: page-fullwidth
 			{{ content }}
 
 			{% if page.comments == true %}
-			{% include comments %}
+			{% include comments.html %}
 			{% endif %}
 		</article>
 	</div><!-- /.medium-12.columns -->
