--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -43,11 +43,11 @@ format: post
 			</span>
 
 			{% if page.show_meta == true %}
-			{% include meta_information %}
+			{% include meta_information.html %}
 			{% endif %}
 
 			{% if page.comments == true %}
-			{% include comments %}
+			{% include comments.html %}
 			{% endif %}
 		</article>
 	</div><!-- /.medium-8.columns -->
@@ -55,14 +55,14 @@ format: post
 
 	{% if page.sidebar == "left" %}
 	<div class="medium-4 columns medium-pull-8">
-		{% include sidebar %}
+		{% include sidebar.html %}
 	</div><!-- /.medium-4.columns -->
 	{% endif %}
 
 
 	{% if page.sidebar == "right" %}
 	<div class="medium-4 columns">
-		{% include sidebar %}
+		{% include sidebar.html %}
 	</div><!-- /.medium-4.columns -->
 	{% endif %}
 </div><!-- /.row -->
