--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,11 +40,11 @@ format: page-fullwidth
       </span>
 
       {% if page.show_meta == true %}
-      {% include meta_information %}
+      {% include meta_information.html %}
       {% endif %}
 
       {% if page.comments == true %}
-      {% include comments %}
+      {% include comments.html %}
       {% endif %}
     </article>
   </div>
