Getting rid of references to remote assets

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,9 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>{% if page.meta_title %}{{ page.meta_title }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-	<link rel="stylesheet" type="text/css" href="{{ assetsFullPath }}/css/swc/bootstrap.css" />
-	<link rel="stylesheet" type="text/css" href="{{ assetsFullPath }}/css/swc/swc.css" />
-	<script src="{{ assetsFullPath }}/js/modernizr.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/swc/bootstrap.css" />
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/swc/swc.css" />
+	<script src="{{ site.baseurl }}/assets/js/modernizr.min.js"></script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
   <script>
@@ -26,21 +26,21 @@
 
 	<!-- Favicon/touch icons -->
 	<link rel="shortcut icon" href="/favicon.ico"> <!-- must remain in root directory -->
-	<link rel="icon" type="image/png" href="{{ assetsFullPath }}/img/swc/favicon-16x16.png" sizes="16x16">
-	<link rel="icon" type="image/png" href="{{ assetsFullPath }}/img/swc/favicon-32x32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="{{ assetsFullPath }}/img/swc/favicon-96x96.png" sizes="96x96">
-	<link rel="apple-touch-icon" sizes="57x57" href="{{ assetsFullPath }}/img/swc/apple-touch-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="{{ assetsFullPath }}/img/swc/apple-touch-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="{{ assetsFullPath }}/img/swc/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="{{ assetsFullPath }}/img/swc/apple-touch-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="{{ assetsFullPath }}/img/swc/apple-touch-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="{{ assetsFullPath }}/img/swc/apple-touch-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="{{ assetsFullPath }}/img/swc/apple-touch-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="{{ assetsFullPath }}/img/swc/apple-touch-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="{{ assetsFullPath }}/img/swc/apple-touch-icon-180x180.png">
-	<link rel="icon" type="image/png" href="{{ assetsFullPath }}/img/swc/android-chrome-192x192.png" sizes="192x192">
-	<link rel="manifest" href="{{ assetsFullPath }}/img/swc/manifest.json">
-	<link rel="mask-icon" href="{{ assetsFullPath }}/img/swc/safari-pinned-tab.svg" color="#293c92">
+	<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/img/swc/favicon-16x16.png" sizes="16x16">
+	<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/img/swc/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/img/swc/favicon-96x96.png" sizes="96x96">
+	<link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/assets/img/swc/apple-touch-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="{{ site.baseurl }}/assets/img/swc/apple-touch-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="{{ site.baseurl }}/assets/img/swc/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="{{ site.baseurl }}/assets/img/swc/apple-touch-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="{{ site.baseurl }}/assets/img/swc/apple-touch-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="{{ site.baseurl }}/assets/img/swc/apple-touch-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="{{ site.baseurl }}/assets/img/swc/apple-touch-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="{{ site.baseurl }}/assets/img/swc/apple-touch-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/assets/img/swc/apple-touch-icon-180x180.png">
+	<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/img/swc/android-chrome-192x192.png" sizes="192x192">
+	<link rel="manifest" href="{{ site.baseurl }}/assets/img/swc/manifest.json">
+	<link rel="mask-icon" href="{{ site.baseurl }}/assets/img/swc/safari-pinned-tab.svg" color="#293c92">
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="msapplication-TileImage" content="/mstile-144x144.png">
 	<meta name="msapplication-config" content="/browserconfig.xml">
