--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 ---
 <!doctype html>
 <html class="no-js" lang="{% if site.language == nil %}en{% else %}{{ site.language }}{% endif %}">
-<head>{% include setup/global-variables.html %}
+<head>
 {% include head.html %}
 </head>
 <body id="top-of-page" class="{{ page.format }}">
