moved assets/swc/swc.scss to assets/swc.scss to standardize

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>{% if page.meta_title %}{{ page.meta_title }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/swc/bootstrap.css" />
-	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/swc/swc.css" />
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/swc.css" />
 	<script src="{{ site.baseurl }}/assets/js/modernizr.min.js"></script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
