style class on body

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 <head>
 {% include head.html %}
 </head>
-<body id="top-of-page" class="{{ page.format }}">
+<body id="top-of-page" class="software-carpentry {{ page.format }}">
 	{% unless page.skip_boilerplate %}
 	{% include navigation.html %}
 	{% endunless %}
