Fixing dangling tag

--- a/_includes/people/ahmed.arfan.html
+++ b/_includes/people/ahmed.arfan.html
@@ -1,5 +1,5 @@
 <p id="ahmed.arfan"> <!-- no image -->
-  <span class="person">Arfan Ahmed</a> worked as a software developer
+  <span class="person">Arfan Ahmed</span> worked as a software developer
   for a number of years before completing a PhD in Medical Imaging
   writing software chemotherapy response prediction in breast cancer
   patients at the University of Hull, UK. As a postdoc he took on the
