Four instructor trainers

--- a/_includes/people/koch_christina.html
+++ b/_includes/people/koch_christina.html
@@ -7,4 +7,6 @@
     researchers and campus compute resources.  
     <br/>
     <strong>Maintainer: <a href="{{site.github_url}}/shell-novice">The Unix Shell</a></strong>
+    <br/>
+    <strong>Instructor Trainer</strong>
 </p>
