--- a/_includes/people/pawlik_a.html
+++ b/_includes/people/pawlik_a.html
@@ -7,4 +7,6 @@
     research focused on documentation in scientific software. 
     <br/>
     <strong>Steering Committee</strong>
+    <br/>
+    <strong>Instructor Trainer</strong>
 </p>
