--- a/_includes/people/teal_t.html
+++ b/_includes/people/teal_t.html
@@ -8,4 +8,6 @@
     communities and greenhouse gas flux.
     <br/>
     <strong>Advisory Council</strong>
+    <br/>
+    <strong>Instructor Trainer</strong>
 </p>
