--- a/_includes/people/wilson_g.html
+++ b/_includes/people/wilson_g.html
@@ -4,4 +4,6 @@
     professional software developer, an author, and a university
     professor. Greg received his PhD in Computer Science from the
     University of Edinburgh in 1993.
+    <br/>
+    <strong>Instructor Trainer</strong>
 </p>
