Cleaning up editing

--- a/_includes/people/kintsakis_athanassios.html
+++ b/_includes/people/kintsakis_athanassios.html
@@ -1,5 +1,5 @@
-<p id="athanassios_kintsakis" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/athanassios_kintsakis.jpg' alt='Kintsakis Athanassios' />">
-    <span class="person">Kintsakis Athanassios</span> is an Electrical
+<p id="kintsakis_athanassios" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/kintsakis_athanassios.jpg' alt='Athanassios Kintsakis' />">
+    <span class="person">Athanassios Kintsakis</span> is an Electrical
     and Computer Engineering graduate and currently a Ph.D. student at
     the Aristotle University of Thessaloniki on the field of
     optimizing workflow parallelization. He is currently employed as a
