--- a/_includes/people/rosenfield_phil.html
+++ b/_includes/people/rosenfield_phil.html
@@ -6,11 +6,10 @@
     evolution models. Phil also creates and engages in programs that
     teach science while combating the exclusion of people based on
     race, economic status, and disability. While at the University of
-    Washington, he was part of the Pre-Major in Astronomy Program,
-    co-created a program to train PhD students to communicate their
-    research to the public, helped create affordable planetariums, and
-    co-created a planetarium outreach program for Seattle Middle and
-    High Schools. He is currently working with the WorldWide Telescope
-    Ambassador program to create affordable digital planetariums in
-    the Boston area.
+    Washington he co-created a program to train PhD students to
+    communicate their research to the public, and co-created a
+    planetarium outreach program for Seattle Middle and High
+    Schools. He now works with the WorldWide Telescope Ambassador
+    program to create affordable digital planetariums in the Boston
+    area.
 </p>
